[gd_scene load_steps=12 format=3 uid="uid://ba448glx7dan1"]

[ext_resource type="Script" path="res://Scripts/XRSetup.gd" id="1_72il2"]
[ext_resource type="PackedScene" path="res://Quest2Controllers/Quest2Controllers/OculusQuest2TouchController_Right.gltf" id="2_7m6dl"]
[ext_resource type="Material" uid="uid://dwv60rbf7qhg2" path="res://Materials/rightlaser.tres" id="3_odu6w"]
[ext_resource type="Script" path="res://Scripts/RightMeshInstance.gd" id="4_0fttl"]
[ext_resource type="Script" path="res://Scripts/ray_cast_3d.gd" id="5_57g6h"]
[ext_resource type="AudioStream" path="res://Audio/beep.mp3" id="6_ss13u"]
[ext_resource type="PackedScene" path="res://Quest2Controllers/Quest2Controllers/OculusQuest2TouchController_Left.gltf" id="7_xv5rd"]
[ext_resource type="Material" uid="uid://dqofxvf5bu6o1" path="res://Materials/leftlaser.tres" id="8_1hnfs"]
[ext_resource type="Script" path="res://Scripts/left_controllermesh.gd" id="9_hdvtp"]

[sub_resource type="ImmediateMesh" id="ImmediateMesh_q1d6i"]

[sub_resource type="ImmediateMesh" id="ImmediateMesh_ft0vx"]

[node name="XROrigin3D" type="XROrigin3D"]
script = ExtResource("1_72il2")

[node name="XRCamera3D" type="XRCamera3D" parent="."]
transform = Transform3D(0.998497, -0.0548108, 0, 0.053612, 0.976659, 0.207997, -0.0114005, -0.207684, 0.978129, 0, 0.190391, 0)
fov = 43.4439

[node name="RightController" type="XRController3D" parent="."]
tracker = &"right_hand"

[node name="OculusQuest2TouchController_Right" parent="RightController" instance=ExtResource("2_7m6dl")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="RightController"]
material_override = ExtResource("3_odu6w")
mesh = SubResource("ImmediateMesh_q1d6i")
skeleton = NodePath("")
script = ExtResource("4_0fttl")

[node name="RayCast3D" type="RayCast3D" parent="RightController/MeshInstance3D"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -1)
collision_mask = 513
collide_with_areas = true
script = ExtResource("5_57g6h")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="RightController/MeshInstance3D"]
stream = ExtResource("6_ss13u")
volume_db = 12.952

[node name="LeftController" type="XRController3D" parent="."]
tracker = &"left_hand"

[node name="OculusQuest2TouchController_Left" parent="LeftController" instance=ExtResource("7_xv5rd")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="LeftController"]
material_override = ExtResource("8_1hnfs")
mesh = SubResource("ImmediateMesh_ft0vx")
script = ExtResource("9_hdvtp")

[node name="RayCast3D" type="RayCast3D" parent="LeftController/MeshInstance3D"]
target_position = Vector3(0, 0, -1)
collision_mask = 257
collide_with_areas = true
script = ExtResource("5_57g6h")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="LeftController"]
stream = ExtResource("6_ss13u")

[connection signal="button_pressed" from="RightController" to="." method="_on_right_controller_button_pressed"]
[connection signal="button_pressed" from="LeftController" to="." method="_on_left_controller_button_pressed"]
